--- a/portfolio.css
+++ b/portfolio.css
@@ -1,65 +1,83 @@
 /* Jonno Portfolio CSS */
 
-#navbar{
+/* Navigation Menu */
+.navbar{
+    width: 100%;
+    margin: 0px auto;
+    text-align: center;
+    position: sticky; /* Reposition navbar when scrolling ? */
+    top: 0;
+}
+.navbar > ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
     background-color: #0eeca9;
 }
-#navbar a {
+.navbar > ul > li {
+    text-align: center;
+    display: inline-block;
+}
+.navbar > ul > li > a {
     float: left;
     display: block;
     color: #000000;
     text-align: center;
-    padding: 14px;
+    padding: 14px 16px;
     text-decoration: none;
 }
-.navbar a:hover {
+.navbar > ul > li > a:hover {
     background: #ddd;
     color: black;
 }
 
-/* Navigation Menu 
-.navbar {
-    width: 160px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #000000;
-    overflow-x: hidden;
-    padding-top: 20px;
+
+/* Page Content*/
+.header{
+    background-color: #FFFFFF;
+    padding: 10px;
+    text-align: center;
+    color: #000000;
 }
-/* Navigation menu links 
-.navbar a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color:aqua;
-    display: block;
-}
-.navbar a:hover{
-    color: #f1f1f1;
-}*/
-body{
-    background-color: #ffffff;
+#body{
+    background-color: #FFFFFF;
     font-family: "Sudo", sans-serif;
 }
-/* Page Content*/
 .main{
     padding: 16px;
+    margin: auto;
+    background-color: #FFFFFF;
 }
-/* Sticky class added to navbar with JS when reaches scroll position*/
+.section1{
+    background-color: #FFFFFF;
+    color: #000000;
+    text-align: center;
+    width: 50%;
+    display: block;
+    margin: auto;
+}
+.section2{
+    background-color: #000000;
+    color: #FFFFFF;
+    text-align: center;
+    width: 50%;
+    display: block;
+    margin: auto;
+}
+/* Sticky class added to navbar with JS when reaches scroll position
 .sticky{
     position: fixed;
     top: 0;
     width: 100%;
 }
-/* Add top padding to prevent quick movement*/
+/* Add top padding to prevent quick movement
 .sticky + .main{
     padding-top: 60px;
-}
-footer{
-    background-color: #777;
+} */
+.footer{
+    background-color: #FFFFFF; /* Change Footer Color */
     padding: 10px;
     text-align: center;
-    color: #FFFFFF;
+    color: #000000;
 }
